# hypergrep

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  bandit.yaml  conftest.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: pull_request_template.md
docs/: HOW_TO.md
hypergrep/: __init__.py  hyperscanner.py  multiscanner.py  scanner.py  utils.py
hypergrep/common/: __init__.py  hyper_utils.py
hypergrep/common/shared/c/: build.sh  hyperscanner.c
hypergrep/lib/: libzstd.so.1.5.5
hypergrep/lib/c/: hyperscanner.c  hyperscanner.h
hypergrep/test/: dummyfile.txt.zst  greptest1.txt  greptest2.txt  test_hypergrep.py
pyhypergrep/: __init__.py  hyperscanner.py  scanner.py
pyhypergrep/common/: hyper_utils.py
pyhypergrep/common/shared/: __init__.py  libzstd.so.1.4.9  libzstd.so.1.5.0
pyhypergrep/common/shared/c/: build.sh  hyperscanner.c  hyperscanner.h
test/: dummyfile.txt  test_hypergrep.py  test_pyhypergrep.py
utils/: build_hyperscanner.sh
